style.css
html {
  scroll-behavior: smooth;
}

body{
    background-color: #262E34;
    font-family: 'Josefin', Arial, sans-serif;
    color: #F8F5EC;
    margin: 0;
}

.hero_wrapper{
    width: 100%;
    z-index: 1;
    display: flex;
    flex-direction: column;
    position: relative;
}

.nav_wrapper{
    width: 100%;
    display: flex;
    justify-content: center;
    background-color: #89BCD9;
    position: sticky;
    top: 0;
    z-index: 1000;
}

h1{
    font-size: 88px;
    font-family: 'Anta', Arial, sans-serif;
    font-weight: 400;
    margin: 36px 0 10px 0;
    text-wrap-mode: nowrap;
}

h2{
    font-size: 60px;
    font-family: 'Anta', Arial, sans-serif;
    font-weight: 400;
    margin: 0 auto 80px auto;
    padding: 0 22px;
    color: #89BCD9;
    text-wrap-mode: wrap;
}

.hero{
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    padding: 40px 30px 0 30px;
    margin: 0 auto;
    max-width: 1240px;
    width: 100%;
    height: 745px;
    box-sizing: border-box;
}

.hero_text_area{
    margin: 68px 0 0 auto;
    padding-left: 24px;
}

.hero_text_area p{
    font-size: 40px;
    margin: 0;
}

.image_background{
    position: relative;
    top: 70px;
    left: 0;
    width: 100%;
    object-fit: cover;
    z-index: -1;
    transform: rotate(-45deg);
}

.social_media{
    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 16px;
    width: 30px;
}

.social_media a{
    position: relative;
    width: 30px;
    height: 30px;
}

.social_media_container{
    display: flex;
    flex-direction: row;
}

.social_media_default,
.social_media_hover{
    position: absolute;
    transition: opacity 0.3s;
    right: 0;
}

.social_media_default{
    opacity: 1;
}

.social_media_hover{
    position: absolute;
    opacity: 0;
}

.social_media a:hover .social_media_default{
    opacity: 0;
}

.social_media a:hover .social_media_hover{
    opacity: 1;
}

.logo_hero{
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
    gap: 1px;
}

.logo_hero_icon{
    position: relative;
    height: 38px;
    min-width: 70px;
    display: flex;
    justify-content: center;
}

.logo_hero .name{
    font-size: 16px;
    margin: 4px 0 0 0;
    color: #F8F5EC;
}

.logo_hero p{
    font-size: 16px;
    margin: 0;
    color: #89BCD9;
}

.logo_default,
.logo_hover{
    position: absolute;
    transition: opacity 1s;
}

.logo_default{
    opacity: 1;
}

.logo_hover{
    position: absolute;
    opacity: 0;
}

.logo_hero_icon:hover .logo_default{
    opacity: 0;
}

.logo_hero_icon:hover .logo_hover{
    opacity: 1;
}

.title{
    width: 100%;
}

.title p{
    letter-spacing: 2px;
    text-wrap-mode: nowrap;
}

.hero_arrow_down{
    display: flex;
    justify-content: center;
    margin-top: 140px;
    width: 100%;
    height: 90px;
}

.hero_arrow_down a{
    cursor: pointer;
}

.arrow_swap_vertical{
    position: relative;
    aspect-ratio: 1 / 2;
    justify-content: center;
    display: flex;
}

.arrow_swap_horizontal{
    position: relative;
    aspect-ratio: 3 / 1;
}

.button_default,
.button_hover,
.button_press,
.button_default_mobile{
    position: absolute;
    transition: opacity 0.3s;
}

.button_hover,
.button_press{
    position: absolute;
    opacity: 0;
}

.button_right{
    right: 0;
}

.arrow_swap_vertical:hover .button_default,
.arrow_swap_horizontal:hover .button_default,
.arrow_swap_vertical:active .button_default_mobile{
    opacity: 0;
}

.arrow_swap_vertical:hover .button_hover,
.arrow_swap_vertical:active .button_press,
.arrow_swap_horizontal:hover .button_hover{
    opacity: 1;
}

.portfolio_img_container{
    width: 100%;
    max-width: 535px;
    position: relative;
    margin: 22px 25px 0 25px;
}

.portfolio_img_container img,
.menu_container_impressum img{
    position: absolute;
    bottom: 0;
    left: 50%;
}

.user_img{
    height: 100%;
    object-fit: cover;
    transform: translate(-50%, 0);
}


.image_background_default,
.image_background_hover{
    transition: opacity 0.5s;
    transform: translate(-50%, -15%) rotate(-45deg);
    height: 80%;
}

.image_background_hover{
    opacity: 0;
}

.portfolio_img_container:hover .image_background_default{
    opacity: 0;
}
.portfolio_img_container:hover .image_background_hover{
    opacity: 1;
}

nav{
    display: flex;
    align-items: center;
    max-width: 1240px;
    width: 100%;
    padding: 0px 20px;
    box-sizing: border-box;
    margin: 0 auto;
    height: 104px;
}

.nav_logo p{
    color: #262E34;
}

.nav_menu{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex: 1;
}

.nav_logo a,
.nav_menu a{
    text-decoration: none;
}

.nav_menu a{
    min-width: 84px;
    min-height: 60px;
    justify-content: center;
    display: flex;
    align-items: center;
    color: #262E34;
    font-size: 26px;
    transition: background-color 0.5s, color 0.5s;
    white-space: nowrap;
}

.nav_menu a.active{
    color: #F8F5EC;
    background-image: url('./assets/icons/nav_menu_hover.svg');
    background-repeat: no-repeat;
    background-position: center;
}

.nav_language a.active{
    color: #F8F5EC;
    background-image: url('./assets/icons/language_menu_background.svg');
    background-repeat: no-repeat;
    background-position: center;
}

.nav_menu a:hover,
.project_menu button:hover{
    color: #F8F5EC;
}

.nav_language{
    display: flex;
    flex-direction: row;
    gap: 16px;
}

.nav_language a{
    color: #262E34;
    text-decoration: none;
    font-size: 16px;
    transition: background-color 0.3s, color 0.3s;
    padding: 8px 8px 4px 8px;
}

.nav_language a:hover{
    color: #F8F5EC;
}

.main_content_wrapper{
    width: 100%;
    z-index: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
}
/* ... */

